Fixed navigation on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -91,11 +91,11 @@
 
   .navbar-default .navbar-collapse {
     border: none;
-    background-color: #e63f3f;
+    background-color: #3f3963;
   }
 
   .navbar-header {
-    background-color: #e63f3f;
+    background-color: #3f3963;
   }
 
   .navbar-nav > li {
