--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,7 +568,7 @@ h3.subtitle:after {
   width: 100%;
   position: absolute;
   left: 50%;
-  z-index: 4;
+  z-index: 5;
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -o-transform: translateX(-50%);
